# cobol2rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: stress_test_workflow.md
.serena/: project.yml
.serena/memories/: codegen_fix_plan_summary.md  execution_poc_results.md  grammar_known_issues.md  runtime_feature_inventory.md  workspace_build_results.md
claudedocs/: cover_letter.md  cover_letter_v2.md  cover_letter_v3.md  cxo_presentation.md  cxo_presentation_v2.md  cxo_presentation_v3.md  scan_280k_results.md  scan_ndjson_refactor.md
cobol/language/statements/: arithmetic_verbs.cbl
crates/cobol-arithmetic/src/: compute.rs  lib.rs  store.rs
crates/cobol-cli/: Cargo.toml
crates/cobol-cli/src/: analyze.rs  check.rs  compile_cmd.rs  corpus_cmd.rs  diff_cmd.rs  main.rs  parse_cmd.rs  preprocess.rs  transpile_cmd.rs  workspace.rs
crates/cobol-cli/src/pipeline/: config.rs  mod.rs  phase0.rs
crates/cobol-cli/src/scan/: args.rs  db.rs  discover.rs  mod.rs  ndjson.rs  phase1.rs  phase2.rs  phase3.rs  worker.rs
crates/cobol-core/src/: config.rs  ebcdic.rs  editing.rs  error.rs  lib.rs  numeric_parse.rs  traits.rs
crates/cobol-io/src/: file_status.rs  file_traits.rs  indexed.rs  relative.rs  resolver.rs  sequential.rs
crates/cobol-move/src/: engine.rs  lib.rs
crates/cobol-runtime/: Cargo.toml
crates/cobol-runtime/src/: call.rs  display.rs  intrinsics.rs  lib.rs  prelude.rs
crates/cobol-sort/: Cargo.toml
crates/cobol-sort/src/: external.rs  in_memory.rs  lib.rs  merge.rs  sort_engine.rs
crates/cobol-sql/tests/: duckdb_integration.rs
crates/cobol-transpiler/: Cargo.toml
crates/cobol-transpiler/src/: ast.rs  diagnostics.rs  error.rs  lib.rs  symbol_table.rs  transpile.rs
crates/cobol-transpiler/src/codegen/: data_gen.rs  mod.rs  proc_gen.rs
crates/cobol-transpiler/src/parser/: copy_expand.rs  copybook.rs  data_listener.rs  file_listener.rs  hierarchy.rs  mod.rs  pic_parser.rs  preprocess.rs  proc_listener.rs
crates/cobol-transpiler/tests/: compile_test.rs  end_to_end.rs
crates/cobol-types/src/: alpha_edited.rs  cobol_array.rs  comp1_float.rs  comp2_float.rs  comp_binary.rs  lib.rs  numeric_edited.rs  packed_decimal.rs  pic_a.rs  pic_x.rs  redefines.rs  var_array.rs  zoned_decimal.rs
docs/: cobol2rust_workarounds.md
scripts/: rust-dev-setup.sh  transpile_corpus.sh
