[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["cobol2rust Team"]
license = "LicenseRef-Proprietary"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common pedantic items that create noise
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
doc_markdown = "allow"
doc_link_with_quotes = "allow"
missing_fields_in_debug = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[workspace.dependencies]
# Core
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
byteorder = "1.5"
num-traits = "0.2"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Derive helpers
derive_more = { version = "1", features = ["display", "from", "into"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Storage backends
rusqlite = { version = "0.32", features = ["bundled"] }
duckdb = { version = "1.4", features = ["bundled"] }
tempfile = "3"

# Parser
antlr-rust = "0.3.0-beta"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
cobol-core = { path = "crates/cobol-core" }
cobol-types = { path = "crates/cobol-types" }
cobol-move = { path = "crates/cobol-move" }
cobol-arithmetic = { path = "crates/cobol-arithmetic" }
cobol-io = { path = "crates/cobol-io" }
cobol-sort = { path = "crates/cobol-sort" }
cobol-sql = { path = "crates/cobol-sql" }
cobol-runtime = { path = "crates/cobol-runtime" }
cobol-transpiler = { path = "crates/cobol-transpiler" }
