[package]
name = "cobol-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "cobol2rust CLI: transpile COBOL to Rust, validate, preprocess"

[[bin]]
name = "cobol2rust"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["duckdb"]
duckdb = ["dep:duckdb"]

[dependencies]
cobol-transpiler = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
duckdb = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
ctrlc = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
